# CursoPythonBackendEbac

./: Aula01.py  Aula08.py  Aula09.py  Aula11.py  Aula12.py  Aula13.py  Aula14.py  Aula15.py  Aula17.py  Aula18.py  Aula19.py  Aula20.py  Aula21.py  Aula22.py  Aula23.py  Aula24.py  Aula25.py  Aula26.py  Aula27.py  Aula28.py  Aula29.py  Aula30.py  Aula31.py  Aula32.py  Aula33.py  Aula34.py  Aula35.py  Aula37.py  Aula38.py  Aula39.py  Aula40.py  Aula41.py  Aula42.py  Aula43.py  Aula44.py  Aula45.py  Aula46.py  Aula47.py  Aula48.py  Aula49.py  (+18 more)
