[project]
name = "cursoebac"
version = "0.1.0"
description = ""
authors = [
    {name = "Vital.Guilherme",email = "guilhermev.j.santos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.117.1,<0.118.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
